2024-02-01T08:18:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7738206049 # 76
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-01
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 850 1551 / 866 1582
* notice: next accum: outdated-unq outdated-all / unq all: 850 1551 / 867 1583
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-18 2024-02-01]

2024-01-31T16:17:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7729070006 # 74
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-31
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 849 1550 / 866 1581
* notice: next accum: outdated-unq outdated-all / unq all: 850 1551 / 866 1582
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-01-17] / [2024-01-31]

2024-01-31T08:17:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7723082376 # 73
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-31
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 849 1550 / 865 1580
* notice: next accum: outdated-unq outdated-all / unq all: 849 1550 / 866 1581
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-31]

2024-01-30T16:18:32Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7714181356 # 71